# flowfoundry

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README-pypi.md  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  cli.rst  concept.rst  conf.py  examples.rst  index.rst  ingestion.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: blocks.rst  functional.rst  graphs.rst  index.rst  nodes.rst  registry.rst
examples/: ingestion.yaml  ingestion_multi_glob.yaml  ingestion_multi_list.yaml  rag_agentic.yaml  rag_local.yaml
examples/external_pluggins/: pdf_loader_openai.py
examples/python/: 01_ingest_and_index.py  01_ingest_pdf.py  02_query_rerank.py  02_rag_query.py  03_compose_openai.py  03_functional_quickstart.py  04_compose_ollama.py  04_custom_strategy_and_node.py  05_blocks_quickstart.py  05_langchain_backends.py  06_pipeline_end_to_end.py  07_rag_with_custom_ingestion.py
examples/yaml/: rag_sample.yaml
src/flowfoundry/: __init__.py  cli.py  contracts.py  exceptions.py  utils.py
src/flowfoundry/blocks/: core.py
src/flowfoundry/functional/: __init__.py
src/flowfoundry/functional/chunking/: fixed.py  hybrid.py  recursive.py
src/flowfoundry/functional/ingestion/: pdf_loader.py
src/flowfoundry/functional/rerank/: cross_encoder.py
src/flowfoundry/graphs/: builder.py
src/flowfoundry/nodes/: io_pdf.py  llm_chat.py  strategy_nodes.py
src/flowfoundry/plans/: runner.py
src/flowfoundry/strategies/: registry.py
src/flowfoundry/utils/: __init__.py  functional_contracts.py
tests/functional/: test_chunking.py  test_compose_llm.py  test_functional_registry.py  test_indexing_chroma.py  test_rerank.py
