[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowfoundry"
version = "1.0.0"
description = "FlowFoundry: a strategy-first, cloud-agnostic agentic workflow framework (LangGraph/LangChain)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Mandar Parab"}]
keywords = ["RAG","LangGraph","LangChain","agents","LLM","framework"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# keep core light
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "langchain>=0.2",
  "langgraph>=0.2",
  "pypdf>=4.2",
]

[project.optional-dependencies]
rag = ["chromadb>=0.5", "sentence-transformers>=3.0"]
search = ["duckduckgo-search>=5.3", "tavily-python>=0.3"]
rerank = ["sentence-transformers>=3.0", "rank-bm25>=0.2"]
qdrant = ["qdrant-client>=1.9"]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.5",
  "black>=24.8",
  "types-PyYAML>=6.0.12.20240808",  # ← add this
]

[project.scripts]
flowfoundry = "flowfoundry.cli:app"

[project.entry-points]
flowfoundry.nodes = { }
flowfoundry.memories = { }
flowfoundry.workflows = { }
flowfoundry.models = { }
flowfoundry.strategies.chunking = { }
flowfoundry.strategies.indexing = { }
flowfoundry.strategies.rerank = { }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

# Silence missing stubs/imports for heavy/optional deps
[[tool.mypy.overrides]]
module = [
  "fastapi",
  "fastapi.responses",
  "uvicorn",
  "typer",
  "langgraph.*",
  "langchain.*",
  "langchain_text_splitters",
  "pypdf",
  "chromadb",
  "qdrant_client",
  "qdrant_client.http.models",
  "sentence_transformers",
  "rank_bm25",
]
ignore_missing_imports = true

